--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -19,17 +19,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
     - name: Cache Gradle packages
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.gradle/caches
@@ -63,13 +63,13 @@ jobs:
         mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/float-browser-release.apk
         
     - name: Upload debug APK artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: float-browser-debug
         path: app/build/outputs/apk/debug/float-browser-debug.apk
         
     - name: Upload release APK artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: float-browser-release
         path: app/build/outputs/apk/release/float-browser-release.apk
@@ -84,13 +84,13 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Download debug APK
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: float-browser-debug
         path: ./
         
     - name: Download release APK
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: float-browser-release
         path: ./
@@ -113,13 +113,10 @@ jobs:
         echo "release_size=$(echo $RELEASE_SIZE | awk '{printf "%.1f KB", $1/1024}')" >> $GITHUB_OUTPUT
         
     - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ steps.get_version.outputs.version }}
-        release_name: Float Browser ${{ steps.get_version.outputs.version }}
+        name: Float Browser ${{ steps.get_version.outputs.version }}
         body: |
           # 🚀 Float Browser ${{ steps.get_version.outputs.version }}
           
@@ -127,8 +124,8 @@ jobs:
           
           ## 📱 Download
           
-          - **[float-browser-release.apk](https://github.com/shade-solutions/float-browser/releases/download/${{ steps.get_version.outputs.version }}/float-browser-release.apk)** - Production version (${{ steps.apk_sizes.outputs.release_size }})
-          - **[float-browser-debug.apk](https://github.com/shade-solutions/float-browser/releases/download/${{ steps.get_version.outputs.version }}/float-browser-debug.apk)** - Debug version (${{ steps.apk_sizes.outputs.debug_size }})
+          - **float-browser-release.apk** - Production version (${{ steps.apk_sizes.outputs.release_size }})
+          - **float-browser-debug.apk** - Debug version (${{ steps.apk_sizes.outputs.debug_size }})
           
           ## ✨ Features
           
@@ -177,25 +174,9 @@ jobs:
           **Built with ❤️ by [Shaswat Raj](https://github.com/sh20raj)**
           
           Repository: https://github.com/shade-solutions/float-browser
+        files: |
+          ./float-browser-release.apk
+          ./float-browser-debug.apk
         draft: false
         prerelease: false
-        
-    - name: Upload Release APK
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./float-browser-release.apk
-        asset_name: float-browser-release.apk
-        asset_content_type: application/vnd.android.package-archive
-        
-    - name: Upload Debug APK
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./float-browser-debug.apk
-        asset_name: float-browser-debug.apk
-        asset_content_type: application/vnd.android.package-archive
+        token: ${{ secrets.GITHUB_TOKEN }}
